<?xml version="1.0" encoding="utf-8"?>
<!--    NIM             : 10118069-->
<!--    Nama            : Muhamad Rizqi Ramdani-->
<!--    Kelas           : IF2-->
<!--    TGl Pengerjaan  : 4 juni 2021-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/photo_diri">
        </ImageView>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/fhome_nama"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="20dp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/fhome_nim"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="20dp">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="INTEREST"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Hobby"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15dp">
            </TextView>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fhome_hobi"
                android:textColor="@color/white">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Makanan Kesukaan"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15dp">
            </TextView>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fhome_makanan"
                android:textColor="@color/white">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Minuman Kesukaan"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15dp">
            </TextView>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fhome_minuman"
                android:textColor="@color/white">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tertarik"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15dp">
            </TextView>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Membuat Game"
                android:textColor="@color/white">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Cita-cita"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15dp">
            </TextView>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Memiliki bisnis di bidang kuliner"
                android:textColor="@color/white">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>