<?xml version="1.0" encoding="utf-8"?>
<!--    NIM             : 10118069-->
<!--    Nama            : Muhamad Rizqi Ramdani-->
<!--    Kelas           : IF2-->
<!--    TGl Pengerjaan  : 4 juni 2021-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_700"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/photo_diri">
        </ImageView>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/fhome_nama"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="20dp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/fhome_nim"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="20dp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/fhome_deskripsi"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_marginLeft="20dp">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="CONTACT"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/btn_telpon"
            android:background="@drawable/telepon"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:onClick="telp">
        </ImageButton>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/btn_email"
            android:background="@drawable/gm"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:onClick="email"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/btn_ig"
            android:background="@drawable/ig"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:onClick="insta"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="FIND ME"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center">
        </TextView>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/btn_maps"
            android:background="@drawable/maps"
            android:layout_gravity="center"
            android:onClick="maps"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ABOUT"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:onClick="about"
            android:background="@drawable/btn_round"
            android:id="@+id/btn_about">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>




</LinearLayout>